[package]
name = "tracing-test"
version = "0.1.0"
authors = ["Emil Hammarstrom <emil.hammarstrom@tedsys.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { path = "../tracing/tracing" }
tracing-subscriber = { path = "../tracing/tracing-subscriber" }
tracing-proc-macros = { path = "../tracing/tracing-proc-macros" }
